// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ interface-extends.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Foo",
      "methods": Array [],
      "properties": Array [],
    },
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [],
      "id": "Bar",
      "methods": Array [],
      "properties": Array [],
    },
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": false,
      "extendedInterfaces": Array [
        "Foo",
        "Bar",
      ],
      "id": "Baz",
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ interface-methods.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "InterfaceMethods",
      "methods": Array [
        MethodParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "a",
          "parameters": Array [],
          "returnType": "void",
        },
        MethodParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "b",
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "a",
              "type": "string",
            },
          ],
          "returnType": "string",
        },
        MethodParseResult {
          "accessibility": "public",
          "documentation": "",
          "documentationTags": Array [],
          "id": "c",
          "parameters": Array [
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "a",
              "type": "boolean",
            },
            ParameterParseResult {
              "documentation": "",
              "documentationTags": Array [],
              "id": "b",
              "type": "number",
            },
          ],
          "returnType": "string",
        },
      ],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ interface-properties.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "InterfaceProperties",
      "methods": Array [],
      "properties": Array [
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "a",
          "type": "string",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "b",
          "type": "string | number",
        },
        PropertyParseResult {
          "documentation": "",
          "documentationTags": Array [],
          "id": "c",
          "type": "(a: string, b: { c: number; }) => boolean",
        },
      ],
    },
  ],
}
`;
